# src/files_api/routes.py
@@ -4,10 +4,6 @@ import mimetypes
 from typing import Annotated
 
 import requests  # type: ignore
-from aws_embedded_metrics import (
-    MetricsLogger,
-    metric_scope,
-)
 from fastapi import (
     APIRouter,
     Depends,
@@ -79,18 +75,19 @@ async def upload_file(
     settings: Settings = request.app.state.settings
     s3_bucket_name = settings.s3_bucket_name
     object_already_exists = object_exists_in_s3(bucket_name=s3_bucket_name, object_key=file_path)
+
+    logger.debug("object_already_exists = {exists}", exists=object_already_exists)
     if object_already_exists:
         response_message = f"Existing file updated at path: {file_path}"
-
         logger.info(f"File updated successfully: {file_path}")
         response.status_code = status.HTTP_200_OK
     else:
         response_message = f"New file uploaded at path: {file_path}"
-
         logger.info(f"File uploaded successfully: {file_path}")
         response.status_code = status.HTTP_201_CREATED
 
     file_bytes: bytes = await file_content.read()
+    logger.debug("Trying to upload the file to S3: {file_path}", file_path=file_path)
     upload_s3_object(
         bucket_name=s3_bucket_name,
         object_key=file_path,
@@ -125,6 +122,10 @@ async def list_files(
     """List Files with Pagination."""
     settings: Settings = request.app.state.settings
     s3_bucket_name = settings.s3_bucket_name
+
+    logger.debug("fetching files from s3: {dir}", dir=query_params.directory)
+    logger.info("query_params = {query_params}", query_params=query_params.model_dump_json())
+
     if query_params.page_token:
         files, next_page_token = fetch_s3_objects_using_page_token(
             bucket_name=s3_bucket_name,
@@ -172,6 +173,7 @@ async def list_files(
             "content": None,
         },
         status.HTTP_200_OK: {
+            "description": "Successful Response",
             "headers": {
                 "Content-Type": {
                     "description": "The [MIME type](https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types/Common_types) of the file.",
@@ -189,6 +191,7 @@ async def list_files(
                     "schema": {"type": "string", "format": "date-time"},
                 },
             },
+            "content": None,
         },
     },
 )
@@ -201,6 +204,8 @@ async def get_file_metadata(file_path: str, request: Request, response: Response
     settings: Settings = request.app.state.settings
     s3_bucket_name = settings.s3_bucket_name
     object_exists = object_exists_in_s3(bucket_name=s3_bucket_name, object_key=file_path)
+
+    logger.debug("object_exists_in_s3 = {exists}", exists=object_exists)
     if not object_exists:
         logger.error(f"File not found: {file_path}")
         raise HTTPException(
@@ -208,6 +213,7 @@ async def get_file_metadata(file_path: str, request: Request, response: Response
             headers={"X-Error": f"File not found: {file_path}"},
         )
 
+    logger.debug("Trying to retrieve metadata for the file: {file_path}", file_path=file_path)
     get_object_response = fetch_s3_object(bucket_name=s3_bucket_name, object_key=file_path)
 
     logger.info(f"File metadata retrieved successfully: {file_path}")
@@ -266,11 +272,15 @@ async def get_file(
     settings: Settings = request.app.state.settings
     s3_bucket_name = settings.s3_bucket_name
     object_exists = object_exists_in_s3(bucket_name=s3_bucket_name, object_key=file_path)
+
+    logger.debug("object_exists_in_s3 = {exists}", exists=object_exists)
     if not object_exists:
         logger.error(f"File not found: {file_path}")
         raise HTTPException(status_code=status.HTTP_404_NOT_FOUND, detail=f"File not found: {file_path}")
 
+    logger.debug("Trying to retrieve the file: {file_path}", file_path=file_path)
     get_object_response = fetch_s3_object(bucket_name=s3_bucket_name, object_key=file_path)
+
     response.headers["Content-Type"] = get_object_response["ContentType"]
     response.headers["Content-Length"] = str(get_object_response["ContentLength"])
     # If the file is a PDF, set the Content-Disposition header to force download
@@ -310,12 +320,15 @@ async def delete_file(
     settings: Settings = request.app.state.settings
     s3_bucket_name = settings.s3_bucket_name
     object_exists = object_exists_in_s3(bucket_name=s3_bucket_name, object_key=file_path)
+
+    logger.debug("object_exists_in_s3 = {exists}", exists=object_exists)
     if not object_exists:
         logger.error(f"Cannot delete file, file not found: {file_path}")
         response.status_code = status.HTTP_404_NOT_FOUND
         response.headers["X-Error"] = f"File not found: {file_path}"
         return response
 
+    logger.debug("Trying to delete the file in S3: {file_path}", file_path=file_path)
     delete_s3_object(bucket_name=s3_bucket_name, object_key=file_path)
     logger.info(f"File deleted successfully at {file_path}")
     response.status_code = status.HTTP_204_NO_CONTENT
@@ -341,6 +354,15 @@ async def delete_file(
                 },
             },
         },
+        status.HTTP_200_OK: {
+            "model": PostFileResponse,
+            "description": "File already exists.",
+            "content": {
+                "application/json": {
+                    "example": {"file_path": "path/to/file.txt", "message": "File already exists: path/to/file.txt"},
+                },
+            },
+        },
     },
 )
 async def generate_file_using_openai(
@@ -358,40 +380,54 @@ async def generate_file_using_openai(
     """
     settings: Settings = request.app.state.settings
     s3_bucket_name = settings.s3_bucket_name
-    content_type = None
+    content_type = None  # Set the content type to None initially
 
+    # Check if the file already exists
+    object_exists = object_exists_in_s3(bucket_name=s3_bucket_name, object_key=query_params.file_path)
+    logger.debug("object_exists_in_s3 = {exists}", exists=object_exists)
+    if object_exists:
+        logger.info(f"File already exists: {query_params.file_path}")
+        response.status_code = status.HTTP_200_OK
+        return PostFileResponse(
+            file_path=query_params.file_path,
+            message=f"File already exists: {query_params.file_path}",
+        )
+
+    # Generate the file based on the file type
+    logger.debug(
+        "Trying to generate content using OpenAI, query_params = {query_params}",
+        query_params=query_params.model_dump_json(),
+    )
     if query_params.file_type == GeneratedFileType.TEXT:
         file_content = await get_text_chat_completion(prompt=query_params.prompt)
         file_content_bytes: bytes = file_content.encode("utf-8")  # convert string to bytes
         content_type = "text/plain"
-
-        logger.debug("Text file generated successfully")
     elif query_params.file_type == GeneratedFileType.IMAGE:
         image_url = await generate_image(prompt=query_params.prompt)
         # Download the image from the URL
         image_response = requests.get(image_url)  # pylint: disable=missing-timeout
         file_content_bytes = image_response.content
 
-        logger.debug(f"Image file generated successfully: {image_url}")
+        logger.debug("Image file generated successfully, image_url: {image_url}", image_url=image_url)
     else:
         response_format = query_params.file_path.split(".")[-1]
         file_content_bytes, content_type = await generate_text_to_speech(
             prompt=query_params.prompt, response_format=response_format  # type: ignore
         )
-        logger.debug("Text-to-Speech file generated successfully")
 
     # If content_type is None, try to guess it from the file path
     content_type: str | None = content_type or mimetypes.guess_type(query_params.file_path)[0]  # type: ignore
     logger.debug(f"Content-Type for the generated file: {content_type}")
 
     # Upload the generated file to S3
+    logger.debug("Trying to upload the generated file to S3: {file_path}", file_path=query_params.file_path)
     upload_s3_object(
         bucket_name=s3_bucket_name,
         object_key=query_params.file_path,
         file_content=file_content_bytes,
         content_type=content_type,
     )
-    logger.info(f"Generated file uploaded successfully at path: {query_params.file_path}")
+    logger.info("Generated file uploaded successfully at path: {file_path}", file_path=query_params.file_path)
     response.status_code = status.HTTP_201_CREATED
     return PostFileResponse(
         file_path=query_params.file_path,
